<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/banner"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/banner"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/menu1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/home_image"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/hometext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home"
                android:layout_alignStart="@id/home"
                android:layout_alignEnd="@id/home"
                android:gravity="center"
                android:text="@string/Home"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/patient"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/patientimg"
                android:src="@drawable/patient" />

            <TextView
                android:id="@+id/patienttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/patient"
                android:layout_alignStart="@id/patient"
                android:layout_alignEnd="@id/patient"
                android:gravity="center"
                android:text="@string/Patient"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/expenses"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/expensesimg"
                android:src="@drawable/expenses" />

            <TextView
                android:id="@+id/expensestext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expenses"
                android:layout_alignStart="@id/expenses"
                android:layout_alignEnd="@id/expenses"
                android:gravity="center"
                android:text="@string/Expenses"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/chat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/chat_img"
                android:src="@drawable/chat" />

            <TextView
                android:id="@+id/chattext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chat"
                android:layout_alignStart="@id/chat"
                android:layout_alignEnd="@id/chat"
                android:gravity="center"
                android:text="@string/Chat"
                android:textSize="17sp" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/categorytext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Categories"
        android:textSize="18sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categorytext"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doc1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/doctor"
                android:src="@drawable/doctor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/current_affairs"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/l1"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doc2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/doctor"
                android:src="@drawable/doctor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/Science_quiz"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/l2"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doc3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/doctor"
                android:src="@drawable/doctor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/Technology"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/l3"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doc4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/doctor"
                android:src="@drawable/doctor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/General_knowledge"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>