<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameui"
    tools:context=".MainActivity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@drawable/banner" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:orientation="vertical"
       android:layout_gravity="center"
       >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/home"
             android:src="@drawable/home"
             android:layout_weight="1"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/patient"
             android:src="@drawable/patient"
             android:layout_weight="1"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/expenses"
             android:src="@drawable/expenses"
             android:layout_weight="1"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/chat"
             android:src="@drawable/chat"
             android:layout_weight="1"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Home"
             android:gravity="center_horizontal"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Patient"
             android:gravity="center_horizontal"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Expenses"
             android:gravity="center_horizontal"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Chats"
             android:gravity="center_horizontal"
             />
      </LinearLayout>
   </LinearLayout>



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="350dp"
       android:orientation="vertical"
       android:layout_gravity="bottom">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:text="@string/categories"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/darker_gray"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="horizontal"
          android:layout_gravity="start">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/home"
             android:src="@drawable/doctor"
             android:layout_gravity=""
             android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:textStyle="bold"
             android:layout_marginStart="10dp"
             android:gravity="center_vertical"
             android:text="@string/current_affairs"/>
      </LinearLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/darker_gray"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_weight="1"
          android:layout_gravity="start">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/home"
             android:src="@drawable/doctor"
             android:layout_gravity=""
             android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:textStyle="bold"
             android:layout_marginStart="10dp"
             android:gravity="center_vertical"
             android:text="@string/science_quiz"/>
      </LinearLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/darker_gray"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_weight="1"
          android:layout_gravity="start">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/home"
             android:src="@drawable/doctor"
             android:layout_gravity=""
             android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:textStyle="bold"
             android:layout_marginStart="10dp"
             android:gravity="center_vertical"
             android:text="@string/technology"/>
      </LinearLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/darker_gray"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_weight="1"
          android:layout_gravity="start">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/home"
             android:src="@drawable/doctor"
             android:layout_gravity=""
             android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:textStyle="bold"
             android:layout_marginStart="10dp"
             android:gravity="center_vertical"
             android:text="@string/general_knowledge"/>
      </LinearLayout>
   </LinearLayout>

   </FrameLayout>