<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintui"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

   <ImageView
       android:id="@+id/banner"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:contentDescription="@string/banner"
       android:src="@drawable/banner"
       android:scaleType="centerCrop"
       app:layout_constraintTop_toTopOf="parent"
       />
   <ImageView
       android:id="@+id/home"
       android:layout_width="40dp"
                android:layout_height="40dp"
       android:layout_marginTop="20dp"
       android:src="@drawable/home"
       app:layout_constraintTop_toBottomOf="@id/banner"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toStartOf="@id/patient"
       app:layout_constraintHorizontal_chainStyle="spread"
       />
   <ImageView
       android:id="@+id/patient"
       android:layout_width="40dp"
                android:layout_height="40dp"
       android:layout_marginTop="20dp"
       android:src="@drawable/patient"
       app:layout_constraintTop_toBottomOf="@id/banner"
       app:layout_constraintStart_toEndOf="@id/home"
       app:layout_constraintEnd_toStartOf="@id/expenses"
       />
   <ImageView
       android:id="@+id/expenses"
       android:layout_width="40dp"
                android:layout_height="40dp"
       android:layout_marginTop="20dp"
       android:src="@drawable/expenses"
       app:layout_constraintTop_toBottomOf="@id/banner"
       app:layout_constraintStart_toEndOf="@id/patient"
       app:layout_constraintEnd_toStartOf="@id/chat"
       />
   <ImageView
       android:id="@+id/chat"
       android:layout_width="40dp"
                android:layout_height="40dp"
       android:layout_marginTop="20dp"
       android:src="@drawable/chat"
       app:layout_constraintTop_toBottomOf="@id/banner"
       app:layout_constraintStart_toEndOf="@id/expenses"
       app:layout_constraintEnd_toEndOf="parent"
       />

   <TextView
       android:id="@+id/hometext"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/home"
       android:textSize="17sp"
       app:layout_constraintTop_toBottomOf="@id/home"
       app:layout_constraintStart_toStartOf="@id/home"
       app:layout_constraintEnd_toEndOf="@id/home"
       />

   <TextView
       android:id="@+id/patienttext"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/patient"
       android:textSize="17sp"
       app:layout_constraintTop_toBottomOf="@id/patient"
       app:layout_constraintStart_toStartOf="@id/patient"
       app:layout_constraintEnd_toEndOf="@id/patient"
       />

   <TextView
       android:id="@+id/expensestext"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/expenses"
       android:textSize="17sp"
       app:layout_constraintTop_toBottomOf="@id/expenses"
       app:layout_constraintStart_toStartOf="@id/expenses"
       app:layout_constraintEnd_toEndOf="@id/expenses"
       />

   <TextView
       android:id="@+id/chattext"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/chat"
       android:textSize="17sp"
       app:layout_constraintTop_toBottomOf="@id/chat"
       app:layout_constraintStart_toStartOf="@id/chat"
       app:layout_constraintEnd_toEndOf="@id/chat"
       />

   <TextView
       android:id="@+id/categorytext"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@id/hometext"
       android:text="Categories:-"
       android:textSize="17dp"
       android:textStyle="bold"
       />

   <ImageView
       android:id="@+id/doc1"
       android:layout_width="50dp"
                android:layout_height="50dp"
       android:layout_marginTop="20dp"
       android:src="@drawable/doctor"
       app:layout_constraintTop_toBottomOf="@id/categorytext"
       app:layout_constraintStart_toStartOf="parent"
       />
   <TextView
       android:id="@+id/currentAffair"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Current Affairs"
       android:textSize="17sp"
       android:textStyle="bold"
       android:layout_marginStart="10dp"
       app:layout_constraintStart_toEndOf="@id/doc1"
       app:layout_constraintTop_toTopOf="@id/doc1"
       app:layout_constraintBottom_toBottomOf="@id/doc1"
       />
   <EditText
       android:id="@+id/send"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/text"
       app:layout_constraintBottom_toBottomOf="@id/currentAffair"
       app:layout_constraintTop_toTopOf="@id/currentAffair"
       app:layout_constraintStart_toEndOf="@id/currentAffair"
       app:layout_constraintEnd_toStartOf="@id/sendbtn"
       />
   <Button
       android:id="@+id/sendbtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/send"
       app:layout_constraintTop_toTopOf="@id/send"
       android:text="@string/send"
       />
   <View
       android:id="@+id/l1"
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@android:color/darker_gray"
       app:layout_constraintTop_toBottomOf="@id/doc1"/>
   <ImageView
       android:id="@+id/doc2"
       android:layout_width="50dp"
                android:layout_height="50dp"
       android:src="@drawable/doctor"
       app:layout_constraintTop_toBottomOf="@id/l1"
       app:layout_constraintStart_toStartOf="parent"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Science Quiz"
       android:textSize="17sp"
       android:textStyle="bold"
       android:layout_marginStart="10dp"
       app:layout_constraintStart_toEndOf="@id/doc2"
       app:layout_constraintTop_toTopOf="@id/doc2"
       app:layout_constraintBottom_toBottomOf="@id/doc2"
       />
   <View
       android:id="@+id/l2"
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@android:color/darker_gray"
       app:layout_constraintTop_toBottomOf="@id/doc2"/>
   <ImageView
       android:id="@+id/doc3"
       android:layout_width="50dp"
                android:layout_height="50dp"
       android:src="@drawable/doctor"
       app:layout_constraintTop_toBottomOf="@id/l2"
       app:layout_constraintStart_toStartOf="parent"
       />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Technology"
       android:textSize="17sp"
       android:textStyle="bold"
       android:layout_marginStart="10dp"
       app:layout_constraintStart_toEndOf="@id/doc3"
       app:layout_constraintTop_toTopOf="@id/doc3"
       app:layout_constraintBottom_toBottomOf="@id/doc3"
       />

   <View
       android:id="@+id/l3"
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@android:color/darker_gray"
       app:layout_constraintTop_toBottomOf="@id/doc3"/>
   <ImageView
       android:id="@+id/doc4"
       android:layout_width="50dp"
                android:layout_height="50dp"
       android:src="@drawable/doctor"
       app:layout_constraintTop_toBottomOf="@id/l3"
       app:layout_constraintStart_toStartOf="parent"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="General Knowledge"
       android:textSize="17sp"
       android:textStyle="bold"
       android:layout_marginStart="10dp"
       app:layout_constraintStart_toEndOf="@id/doc4"
       app:layout_constraintTop_toTopOf="@id/doc4"
       app:layout_constraintBottom_toBottomOf="@id/doc4"
       />
   </androidx.constraintlayout.widget.ConstraintLayout>